[gd_scene load_steps=4 format=3 uid="uid://dthddglqupib"]

[ext_resource type="Script" path="res://scripts/pipe_pair.gd" id="1_far3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuc1m"]
size = Vector2(64, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2k7n"]
size = Vector2(23, 1497)

[node name="PipePair" type="Node2D"]
position = Vector2(0, -149)
script = ExtResource("1_far3q")

[node name="TopPipe" type="StaticBody2D" parent="."]
position = Vector2(0, 48)

[node name="ColorRect" type="ColorRect" parent="TopPipe"]
custom_minimum_size = Vector2(64, 600)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -600.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.16992, 0.381191, 1.82897e-06, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(0, -300)
shape = SubResource("RectangleShape2D_uuc1m")

[node name="BottomPipe" type="StaticBody2D" parent="."]
position = Vector2(0, 910)

[node name="ColorRect" type="ColorRect" parent="BottomPipe"]
custom_minimum_size = Vector2(64, 500)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -600.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.16992, 0.381191, 1.82897e-06, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(0, -300)
shape = SubResource("RectangleShape2D_uuc1m")

[node name="Scored" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
position = Vector2(-19.5, 162.5)
shape = SubResource("RectangleShape2D_b2k7n")

[connection signal="body_exited" from="Scored" to="." method="_on_scored_body_exited"]
